[package]
authors = ["remolueoend <remolueoend@users.noreply.github.com>"]
edition = "2018"
name = "forge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
graphql_client = "0.10.0"
serde = {version = "^1", features = ["derive"]}

[dependencies.clap]
features = ["color", "wrap_help"]
version = "2.33.3"
