[package]
authors = ["remolueoend <remolueoend@users.noreply.github.com>"]
edition = "2018"
name = "forge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.1.0"
color-eyre = "0.5.11"
colored = "2.0.0"
eyre = "0.6.5"
graphql_client = "0.10.0"
serde = {version = "^1", features = ["derive"]}
thiserror = "1.0.26"
loggerv = "0.7.2"
log = "0.4.14"
serde_json = "1.0.66"
tempfile = "3.2.0"
open = "2.0.1"
[dependencies.tokio]
features = ["full"]
version = "1.10.0"
[dependencies.reqwest]
features = ["json"]
version = "0.11.4"

[dependencies.clap]
features = ["color", "wrap_help"]
version = "2.33.3"
